<resources>
    <string name="app_name">First Kortlin 30days</string>
    <string name="button">Button</string>
    <string name="press_button_for_number">Press Button For Number</string>
    <string name="compare">Compare</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="player_name">Player Name</string>
    <string name="compare_your_luck">Compare your Luck</string>
    <string name="compare_2_dice">Compare 2 Dice</string>
    <string name="lucky_4">Lucky 4</string>
    <string name="score">Score</string>
    <string name="number">Number</string>
    <string name="back">Back</string>
    <string name="less_then_4">Less then 4</string>
    <string name="equal_to_4">Equal to 4</string>
    <string name="greater_then_4">Greater then 4</string>
    <string name="_1">1</string>
    <string name="reset">Reset</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="number_1">Number 1</string>
    <string name="play">play</string>
    <string name="number2">Number2</string>
</resources>
